sidux-art-kde-gaia (0.0.10) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Bernard Gray ]
  * kdm - use discrete image that doesn't scale for sidux logo in config
  * kdm - add sidux log bitmap and source
  * kdm - make 1600x1200 default res for background 

 -- Bernard Gray <bernard.gray@gmail.com>  Sat, 11 Aug 2007 18:36:20 +1000

sidux-art-kde-gaia (0.0.9) unstable; urgency=low

  * cathbard's relative placement of login text and boxes - for widesc support
  * merge username/pw label and entry boxes into a single item

 -- Bernard Gray <bernard.gray@gmail.com>  Sat, 28 Jul 2007 13:20:44 +1000

sidux-art-kde-gaia (0.0.8) unstable; urgency=low

  * add kdm wide background binary
  * add ksplash wide background binary and source svg

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 25 Jul 2007 11:41:35 +1000

sidux-art-kde-gaia (0.0.7) unstable; urgency=low

  * add the sources this time (whoops) 

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 25 Jul 2007 11:12:16 +1000

sidux-art-kde-gaia (0.0.6) unstable; urgency=low

  * make widescreen kdm source (by popular demand) 

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 25 Jul 2007 08:22:58 +1000

sidux-art-kde-gaia (0.0.5) unstable; urgency=low

  * resolve name issue in ksplash 

 -- Bernard Gray <bernard.gray@gmail.com>  Fri, 06 Jul 2007 09:21:05 +1000

sidux-art-kde-gaia (0.0.4) unstable; urgency=low

  * adjust ksplash text colours to match kdm theme
  * update preview for new text colours
  * modify font size and welcome msg for ksplash
  * update preview for changes 

 -- Bernard Gray <bernard.gray@gmail.com>  Thu, 05 Jul 2007 17:06:09 +1000

sidux-art-kde-gaia (0.0.3) unstable; urgency=low

  * kdisplay color scheme update from knithx. Add info to debian/copyright
    about knithx' contribution.

 -- Kel Modderman <kel@otaku42.de>  Sun, 01 Jul 2007 09:12:41 +1000

sidux-art-kde-gaia (0.0.2) unstable; urgency=low

  [ Kel Modderman ]
  * Add color schemes.
