@@ -22,7 +22,7 @@
 		
 		<item type="pixmap">
 			<normal file="login.png"/>
-			<pos anchor="c" x="50%" y="50%" width="34%" height="35%"/>
+			<pos anchor="c" x="50%" y="50%"/>
 		</item>	
 		
 		<item type="pixmap">
@@ -31,61 +31,62 @@
 		</item>	
 		
 		<item type="rect">		
-			<pos anchor="c" x="54%" y="57%" width="30%" height="18%"/>
+			<pos anchor="c" x="50%" y="50%" width="360" height="280"/>
 			
 			<!-- username-label -->
 			<item type="label">
-				<pos anchor="w" x="0%" y="30%"/>
+				<pos anchor="w" x="55" y="170"/>
 				<normal color="#AFAA8E" font="Verdana 12"/>
 				<stock type="username-label"/>
 			</item>
 			
 			<!-- password-label -->
 			<item type="label">
-				<pos anchor="w" x="0%" y="50%"/>
+				<pos anchor="w" x="55" y="205"/>
 				<normal color="#AFAA8E" font="Verdana 12"/>
 				<stock type="password-label"/>
 			</item>
 				
 			<!-- username-entry -->
 			<item type="entry" id="user-entry">
-				<pos anchor="c" x="50%" y="30%" height="13%" width="41%"/>
+				<pos anchor="c" x="215" y="170" height="23" width="135"/>
 			</item>
 			
 			<!-- password-entry -->
 			<item type="entry" id="pw-entry">
-				<pos anchor="c" x="50%" y="50%" height="13%" width="41%"/>
+				<pos anchor="c" x="215" y="205" height="23" width="135"/>
+			</item>
+
+			<!-- Welcome on ... -->
+			<item type="label">
+				<pos anchor="c" x="50%" y="60"/>
+				<normal color="#999073" font="Verdana 18"/>
+				<stock type="welcome-label"/>
+			</item>
+	
+			<item type="label" id="clock">
+				<normal color="#AFAA8E" font="Verdana 11"/>
+				<pos anchor="c" x="50%" y="90"/>		
+				<text>%c</text>
+			</item>
+	
+			<!-- Login-Error -->
+			<item type="label" id="pam-error">
+				<pos anchor="c" x="50%" y="110"/>
+				<normal color="#a20000" font="Verdana 13"/>
+				<text></text>
+			</item>
+		
+			<!-- capslock-warning -->
+			<item type="label" id="caps-lock-warning">
+				<pos anchor="c" x="50%" y="130"/>
+				<normal color="#001692" font="Verdana 11"/>
+				<stock type="caps-lock-warning"/>
 			</item>
 		</item>			
 		
-		<!-- Login-Error -->
-		<item type="label" id="pam-error">
-			<pos anchor="c" x="50%" y="61%"/>
-			<normal color="#a20000" font="Verdana 13"/>
-			<text></text>
-		</item>
-		
-		<!-- capslock-warning -->
-		<item type="label" id="caps-lock-warning">
-			<pos anchor="c" x="50%" y="50%"/>
-			<normal color="#001692" font="Verdana 11"/>
-			<stock type="caps-lock-warning"/>
-		</item>
 	</item>
 	
-	
-	<!-- Welcome on ... -->
-	<item type="label">
-		<pos anchor="c" x="50%" y="40%"/>
-    <normal color="#999073" font="Verdana 18"/>
-		<stock type="welcome-label"/>
-	</item>
-	
-	<item type="label" id="clock">
-    <normal color="#AFAA8E" font="Verdana 11"/>
-		<pos anchor="c" x="50%" y="44%"/>		
-		<text>%c</text>
-	</item>
 	
 	<item type="rect" id="disconnect_button" button="true">
 		<show modes="flexi,remote"/>
